# eng-crew

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
eng_crew/: __init__.py  __main__.py  cli.py  config.py  git_skill.py  hitl.py  pipeline.py  preprocessor.py  project_context.py  project_index.py  registry.py  run.py  sprint.py  stacks.py  state.py  tracker.py  usage.py
eng_crew/agents/: __init__.py  architect.py  base.py  complexity_classifier.py  dispatcher.py  executor.py  orchestrator.py  reviewer.py  simple_executor.py
eng_crew/agents/specialists/: __init__.py  ai_pipeline.py  backend.py  base_specialist.py  database.py  frontend.py  generic.py  infrastructure.py
eng_crew/dashboard/: __init__.py  __main__.py  app.py  events.py  schemas.py
eng_crew/dashboard/frontend/: package-lock.json  package.json  vite.config.ts
eng_crew/dashboard/frontend/src/: App.tsx  index.css  main.tsx
eng_crew/dashboard/routers/: __init__.py  intake.py  projects.py  runs.py  system.py
eng_crew/dashboard/static/: index.html
eng_crew/dashboard/static/assets/: index-13Zjy959.js  index-2Z16ugzK.css  index-8he0jcV0.js  index-B-vCgsJW.js  index-B1eDlTUR.js  index-BDJ56zk-.js  index-BKzM4pRC.css  index-BMZNrdyV.js  index-BUMdYFmG.js  index-BUpkBNCl.css  index-BXeY03js.js  index-BY8ljc3I.css  index-BYF_gFpX.css  index-BYnXGfw7.css  index-BZUjDMhV.css  index-BdiEjwE2.css  index-Bghtqp0j.js  index-BhGarKsP.css  index-BjJHA2qz.css  index-C0RmJqlW.js  index-C0fl1x2A.css  index-C40MT4Xv.js  index-C4FCrtQv.js  index-C4pz-j3a.js  index-C8lUNYj3.js  index-C9lxEA-_.js  index-CA_lc1Io.js  index-CPKhLQ_F.css  index-CS85QubP.css  index-CU59NS3o.css  index-CU5hXXoU.js  index-CVob2R7n.js  index-Cb9hgBy5.js  index-Ced-VHWH.js  index-CgSP5HBt.js  index-ChK4wuTM.css  (+34 more)
eng_crew/providers/: __init__.py  anthropic_api.py  base.py  claude_cli.py  deepseek.py  gemini.py  gemini_cli.py  ollama.py  openrouter.py
(+17 files in other folders)
