[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eng-crew"
version = "0.1.0"
description = "An autonomous AI engineering team that decomposes, codes, reviews, and executes software tasks."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "engineering", "automation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "aiofiles>=23.2.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "jinja2>=3.1",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
docker = [
    "docker>=7.1.0",
]

[project.scripts]
eng-crew = "eng_crew.cli:app"

[project.urls]
Homepage = "https://github.com/VSJ-superhub/eng-crew"
Issues = "https://github.com/VSJ-superhub/eng-crew/issues"

[tool.hatch.build.targets.wheel]
packages = ["eng_crew"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
